JSW Devsb/src/objects/NSR_Targets__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <label>Customer Group</label>
        <picklist>
            <picklistValues>
                <fullName>Trade &amp; Non-Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Districts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Districts</label>
        <referenceTo>Districts__c</referenceTo>
        <relationshipLabel>NSR Targets</relationshipLabel>
        <relationshipName>NSR_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NSR_Target__c</fullName>
        <label>NSR Target</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>NSR Targets</relationshipLabel>
        <relationshipName>NSR_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>NSR Targets</relationshipLabel>
        <relationshipName>NSR_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>NSR Targets</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Plant__c</columns>
        <columns>State__c</columns>
        <columns>Product_Group__c</columns>
        <columns>NSR_Target__c</columns>
        <columns>Customer_Group__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>NSR Targets Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NSR Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>